Bug hunt 2 - fix avatar img alignment

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,6 +8,7 @@
 
 .gh-username img{
   width: 32px;
+  margin: 10px 10px;
 }
 
 #profile-bio{
